codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_rich_footer_with_active_goal.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"│›                                                                                                                                                                                  "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"  GPT 5.6 Sol Max · /tmp/project · 100% context left · Weekly 94% left                                                                                          Goal · 40K / 50K    "
