codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_mixed.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: status_line_popup_snapshot(&mut chat)
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search
  >
› [x] Use theme colors     Apply colors from the active /theme
  ───────────────────────
  [x] Project name         Project name (omitted when unavailable)
  [x] Git branch           Current Git branch (omitted when unavailable)
  [x] Thread title         Current thread title, or thread identifier when unnamed
  [ ] Model                Current model name
  [ ] Model + reasoning    Current model name with reasoning level
  [ ] Reasoning            Current reasoning level

  my-project · feature/mixed-preview · Mixed preview thread
  ↑/↓ select · Space toggle · ←/→ reorder · Enter save · Esc cancel
