codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: status_line_popup_snapshot(&mut chat)
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search
  >
› [x] Use theme colors       Apply colors from the active /theme
  ───────────────────────
  [x] Primary usage limit    Primary usage remaining; hidden when unavailable
  [x] Secondary usage limit  Secondary usage remaining; hidden when unavailable
  [ ] Model                  Current model name
  [ ] Model + reasoning      Current model name with reasoning level
  [ ] Reasoning              Current reasoning level
  [ ] Current directory      Current working directory

  Monthly 65% left · Weekly 50% left
  ↑/↓ select · Space toggle · ←/→ reorder · Enter save · Esc cancel
