codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_workspace_headline.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: status_line_popup_snapshot(&mut chat)
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search
  >
› [ ] Use theme colors     Apply colors from the active /theme
  ───────────────────────
  [x] Workspace headline   Workspace notification headline (Enterprise workspaces only; omitted w…
  [ ] Model                Current model name
  [ ] Model + reasoning    Current model name with reasoning level
  [ ] Reasoning            Current reasoning level
  [ ] Current directory    Current working directory
  [ ] Project name         Project name (omitted when unavailable)

  Workspace maintenance starts at 5pm
  Press space to toggle; ←/→ to move; enter to confirm and close; esc to close
