codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_and_approval_modal.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                                    "
"                                                                                                    "
"  ◇ Approve this command?                                                                           "
"                                                                                                    "
"  Reason: this is a test reason such as one that would be produced by the model                     "
"                                                                                                    "
"  $ echo 'hello world'                                                                              "
"                                                                                                    "
"› 1. Allow this command (y)                 Runs this action once.                                  "
"  2. Always allow `echo 'hello world'` (p)  Saves an allow rule for matching commands.              "
"  3. Tell Codex what to do instead (esc)      Stops this request and returns to Codex.              "
"                                                                                                    "
"  enter select · esc stop & reply                                                                   "
