codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__switch_account_name.snap
---
source: tui/src/chatwidget/tests/switch_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
▌ Name this OpenAI account
▌
▌ Use a short nickname, such as work or personal

enter confirm · esc back
